Ticket #28386: Fixed link color of collapse/expand of list entries.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -554,10 +554,6 @@ div.rf_buttons {
 	white-space: nowrap;
 }
 
-.dfEntryTitle.colored a {
-	color: var(--text-primary);
-}
-
 .dfEntryTitle label {
 	margin-right: var(--spacing-02);
 }
